--- a/app/src/main/res/layout/activity_my_dictionaries.xml
+++ b/app/src/main/res/layout/activity_my_dictionaries.xml
@@ -15,18 +15,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        android:layout_marginBottom="31dp" />
 
     <EditText
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:id="@+id/editText2"
+        android:layout_width="337dp"
+        android:layout_height="392dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintHorizontal_bias="0.502"
+        android:inputType="textMultiLine"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.51"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/button1" />
+
 </android.support.constraint.ConstraintLayout>
