--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,6 +13,6 @@
         <item
             android:id="@+id/nav_gram_book"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Menu 3" />
+            android:title="Reading" />
     </group>
 </menu>
