--- a/app/src/main/res/layout/activity_translation_word.xml
+++ b/app/src/main/res/layout/activity_translation_word.xml
@@ -13,6 +13,7 @@
         android:id="@+id/btnWord1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/btnWord2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -21,7 +22,8 @@
     <Button
         android:id="@+id/btnWord2"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/btnWord3"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -29,8 +31,9 @@
 
     <Button
         android:id="@+id/btnWord3"
-        android:layout_width="91dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/btnWord4"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -39,14 +42,15 @@
 
     <Button
         android:id="@+id/btnWord4"
-        android:layout_width="89dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
+        android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnWord3"
-        />
+        android:layout_marginBottom="32dp"/>
 
     <Button
         android:id="@+id/btnNext2"
@@ -55,7 +59,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="28dp"
+        android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
         android:text="Next"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -63,13 +67,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.982"/>
+        app:layout_constraintVertical_bias="0.982"
+        android:layout_marginStart="8dp"/>
 
     <TextView
         android:id="@+id/tvTranslation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
+        android:textSize="35sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
