--- a/app/src/main/res/layout/fragment_my_dictionary.xml
+++ b/app/src/main/res/layout/fragment_my_dictionary.xml
@@ -8,11 +8,11 @@
         android:id="@+id/get_words"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Get Words"
+        android:text="Refresh"
         android:onClick="getWords"/>
-    <ListView
-        android:id="@+id/word_list_view"
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/wordss_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </ListView>
+        android:layout_height="wrap_content" />
 </LinearLayout>
