--- a/app/src/main/res/layout/text_item.xml
+++ b/app/src/main/res/layout/text_item.xml
@@ -3,8 +3,12 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
               android:layout_height="56dp"
+              android:layout_marginTop="5dp"
+              android:layout_marginBottom="5dp"
+              android:layout_marginLeft="5dp"
+              android:layout_marginRight="5dp"
               android:orientation="horizontal"
-              android:background="?android:attr/selectableItemBackground">
+              android:background="@drawable/rounded_item">
 
     <TextView
         android:id="@+id/text_item"
@@ -12,18 +16,12 @@
         android:layout_height="wrap_content"
         android:text="@string/element_text"
         tools:text="element"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         android:layout_marginLeft="16dp"
-        android:textSize="24sp"/>
-
-    <Space
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"/>
-
-    <CheckBox
-        android:id="@+id/text_check_box"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="16dp"/>
+        android:layout_marginTop="10dp"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
+        android:ellipsize="marquee"/>
 
 </LinearLayout>
